--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,4 +80,4 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "jerryscript*.tar.gz"
+            artifacts: "jerryscript/*.tar.gz"
